--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build BunnyTweak
-    runs-on: macos-12
+    runs-on: macos-latest
     env:
       THEOS: ${{ github.workspace }}/theos
 
@@ -22,7 +22,7 @@ jobs:
 
       - name: Check cache
         run: |
-          echo upstream_heads=`git ls-remote https://github.com/theos/theos | head -n 1 | cut -f 1`-`git ls-remote https://github.com/theos/sdks | head -n 1 | cut -f 1` >> $GITHUB_ENV
+          echo upstream_heads=`git ls-remote https://github.com/theos/theos | head -n 1 | cut -f 1`-`git ls-remote https://github.com/xybp888/iOS-SDKs | head -n 1 | cut -f 1` >> $GITHUB_ENV
     
       - name: Restore cache if available
         id: cache
@@ -43,9 +43,9 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/checkout@v4.1.7
         with:
-          repository: theos/sdks
+          repository: xybp888/iOS-SDKs
           path: theos/sdks
-          sparse-checkout: "iPhoneOS16.5.sdk"
+          sparse-checkout: "iPhoneOS17.5.sdk"
           sparse-checkout-cone-mode: false
 
       - name: Save cache if available
