--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,14 @@ jobs:
         with:
           repository: pyoncord/BunnyTweak
           path: main
-    
+
       - name: Install Dependencies
         run: brew install ldid make
 
       - name: Check cache
         run: |
-          echo upstream_heads=`git ls-remote https://github.com/theos/theos | head -n 1 | cut -f 1`-`git ls-remote https://github.com/xybp888/iOS-SDKs | head -n 1 | cut -f 1` >> $GITHUB_ENV
-    
+          echo upstream_heads=`git ls-remote https://github.com/theos/theos | head -n 1 | cut -f 1`-`git ls-remote https://github.com/theos/sdks | head -n 1 | cut -f 1` >> $GITHUB_ENV
+
       - name: Restore cache if available
         id: cache
         uses: actions/cache/restore@v4.0.2
@@ -43,12 +43,12 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/checkout@v4.1.7
         with:
-          repository: xybp888/iOS-SDKs
+          repository: theos/sdks
           path: theos/sdks
-          sparse-checkout: "iPhoneOS17.5.sdk"
+          sparse-checkout: "iPhoneOS16.5.sdk"
           sparse-checkout-cone-mode: false
 
-      - name: Save cache if available
+      - name: Save cache if needed
         if: steps.cache.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4.0.2
         with:
@@ -61,7 +61,7 @@ jobs:
           gmake package FINALPACKAGE=1
 
       - name: Create Release
-        uses: softprops/action-gh-release@v2.0.5
+        uses: softprops/action-gh-release@v2.0.6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
