--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     name: Build BunnyTweak
     runs-on: macos-latest
+    permissions:
+      contents: write
     env:
       THEOS: ${{ github.workspace }}/theos
 
