--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,13 +53,10 @@ jobs:
 
       - name: ⚙️ Setup iOS Swift Toolchain
         if: steps.cache.outputs.cache-hit != 'true'
-        working-directory: theos
         run: |
-          mkdir toolchain
-          cd toolchain
-
+          mkdir $THEOS/toolchain/
           curl https://github.com/kabiroberai/swift-toolchain-linux/releases/download/v2.3.0/swift-5.8-ubuntu22.04.tar.xz -o swift.tar.xz
-          tar -xf ./swift.tar.xz
+          tar -xf ./swift.tar.xz -C $THEOS/toolchain/
           
       - name: ♻️ Save cache if needed
         if: steps.cache.outputs.cache-hit != 'true'
