--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,7 @@ jobs:
 
       - name: ⚙️ Setup iOS Swift Toolchain
         if: steps.cache.outputs.cache-hit != 'true'
-        run: curl -s https://github.com/kabiroberai/swift-toolchain-linux/releases/download/v2.3.0/swift-5.8-ubuntu22.04.tar.xz | tar -xJC $THEOS/toolchain/
+        run: wget -q0- https://github.com/kabiroberai/swift-toolchain-linux/releases/download/v2.3.0/swift-5.8-ubuntu22.04.tar.xz | tar -xJC $THEOS/toolchain/
           
       - name: ♻️ Save cache if needed
         if: steps.cache.outputs.cache-hit != 'true'
