--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,5 +82,6 @@ jobs:
       - name: 🚀 Publish Release
         uses: softprops/action-gh-release@a74c6b72af54cfa997e81df42d94703d6313a2d0 # v2.0.6
         with:
-          tag_name: ${{ github.run_number }}
+          tag_name: bunny-${{ github.run_number }}
+          name: BunnyTweak (${{ github.run_number }})
           files: main/packages/*.deb
