--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,10 @@ jobs:
       THEOS: ${{ github.workspace }}/theos
 
     steps:
+      - name: 💾 Install System Dependencies
+        run: |
+          brew install ldid-procursus make
+    
       - name: 🚚 Check out the Repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
@@ -57,7 +61,7 @@ jobs:
       - name: 📦 Build DEBs
         working-directory: main
         run: |
-          make package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
+          gmake package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
 
       - name: 🚀 Publish Release
         uses: softprops/action-gh-release@9a28f2423fd7ba2781181bb13e8aba228027c4e9 # v2.0.8 + 4 Package Bumps
